jewel-badge: temporal fix for badges clipped

--- a/frameworks/projects/Jewel/src/main/sass/components/_button.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_button.sass
@@ -53,6 +53,9 @@
     .fonticon
         cursor: inherit
 
+    // temporal for badges (we need to refactor it)
+    &.viewport
+        overflow: visible
 
 @media -royale-swf
     j|Button
